[package]
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
name = "cf-worker"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
serde_json = "1.0.68"
worker = "0.0.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
anyhow = "1.0.44"
async-graphql = {version = "2.9.15", features = ["log"]}
async-std = {version = "1.10.0", features = ["unstable"]}
async-trait = "0.1.51"
console_error_panic_hook = {version = "0.1.6", optional = true}
console_log = "0.2.0"
futures = "0.3.17"
futures-io = "0.3.17"
getrandom = {version = "0.2.3", features = ["js"]}
graphql_client = "0.10.0"
log = "0.4.14"
once_cell = "1.8.0"
serde = {version = "1.0.130", features = ["derive"]}
tide = {default-features = false, path = "./tide-gutted"}
wee_alloc = {version = "0.4.5", optional = true}
thiserror = "1.0.29"
serde-wasm-bindgen = "0.3.1"
js-sys = "0.3.55"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
